@@ -1,3 +1,14 @@
+2007-03-28  Benoît Dejean  <benoit@placenet.org>
+
+	* configure.in:
+	* src/util.cpp:
+	* src/util.h:
+	
+	Changes needed by incoming cleanup/fixes.
+	
+	procman::size_cell_data_func: new function.
+	UnrefMapValues::operator(): added a check.
+
 2007-03-27  Benoît Dejean  <benoit@placenet.org>
 
 	* configure.in:
